<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, QuickTimerActivity!</string>
    <string name="app_name">QuickTimer</string>
    <string name="sep">:</string>
    <string name="title">TIME LIMIT</string>
    <string name="minute">MINUTE</string>
    <string name="second">SECOND</string>
    <string name="msecond">MSECOND</string>
    <string name="stop">STOP</string>
    <string name="fontFileName">square.ttf</string>
    <string name="menuMinuteText">分</string>
    <string name="menuTime">時刻指定</string>
    <string name="backAlertMessage">アプリを終了するとタイマーも終了しますが、よろしいですか？</string>

</resources>